--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -1,12 +1,30 @@
-/* html { 
-    background: url(https://upload.wikimedia.org/wikipedia/commons/thumb/7/72/High_Court_of_Australia_building%2C_Canberra_03.jpg/1200px-High_Court_of_Australia_building%2C_Canberra_03.jpg) no-repeat center center fixed; 
+html { 
+    background-color: white;
     -webkit-background-size: cover;
     -moz-background-size: cover;
     -o-background-size: cover;
     background-size: cover;
-  } */
+    cursor: pointer;
 
-   html, body {margin: 0; height: 100%;}
+  }
+
+html, body {margin: 0; height: 100%;}
+
+body{
+    margin: 0;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
+      'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+      sans-serif;
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
+    cursor: pointer;
+  }
+
+  .page_container{
+    display: table;
+    width: 1280px;
+    margin: 0px auto;
+  }
 
 #Error404 {
 margin-top: 200px;
@@ -24,9 +42,7 @@ opacity: 0.7;
 }
 
 #messages {
-    background-color: white;
-    height: auto;
-    width: 600px;
+    background-color: rgb(249, 170, 170);
     margin: auto;
     margin-top: 60px;
     margin-bottom: 20px;
@@ -36,4 +52,428 @@ opacity: 0.7;
     color: #1A1A1A;
     font-size: 20px;
     border-radius: 15px;
+    display:flex;
+    flex-direction:column;
+    flex-wrap: wrap;
+    width: 49%;
+    height: 20%;
+    margin-left: 38px;
+    
+}
+
+#posts {
+    background-color: rgb(249, 170, 170);
+    margin: auto;
+    margin-top: 60px;
+    margin-bottom: 20px;
+    text-align: center;
+    padding: 20px;
+    opacity: 0.9;
+    color: #1A1A1A;
+    font-size: 20px;
+    border-radius: 15px;
+    display:flex;
+    flex-direction:column;
+    flex-wrap: wrap;
+    width: 49%;
+    height: 20%;
+    margin-left: 38px;
+    
+}
+
+img{
+    max-height: 250px;
+    margin: 0 auto;
+}
+
+input {
+    width: 80%;
+    text-align: center;
+    margin-bottom: 10px;
+}
+
+
+
+textarea{
+    width: 80%;
+    text-align: center;
+    margin-bottom: 10px;
+}
+
+
+.navbar-brand{
+    align-items: center;
+    display: -ms-inline-flexbox;
+    display: inline-flex;
+    background-color: var(--newCommunityTheme-body);
+    border-bottom: 1px solid var(--newCommunityTheme-line);
+    box-sizing: border-box;
+    -ms-flex-direction: row;
+    flex-direction: row;
+    -ms-flex-positive: 1;
+    flex-grow: 1;
+    padding: 0 20px;
+}
+
+.navbar-dropdown{
+    float: right;
+    color: black;
+}
+
+  .navbar-dropdown a {
+    text-decoration: none;
+    text-align: center;
+    font-size: 12px;
+    text-decoration: none;
+    padding: 10px;
+    margin: 16px;
+    
+  }
+  .navbar-logo{
+    margin: 16px;
+  }
+  .navbar-link{
+  margin: 10px;
+  padding: 5px;
+  }  
+
+
+.button{
+    background-color: #ec0a0a;
+    color: white;
+    border-radius: 20px;
+    width: 160px;
+    box-shadow: 0 0 7px #cccbcb;
+    height: 35px;
+    border: none;
+    background: linear-gradient(177deg, #f10404, #e6777a, #f2dfdf);
+    text-align: center;
+    margin: 30px 40px 40px;
+    padding: 10px;
+    text-decoration: none;
+    cursor: pointer;
+    
+}
+
+
+button{
+    background-color: #ec0a0a;
+    color: white;
+    border-radius: 20px;
+    width: 160px;
+    box-shadow: 0 0 7px #cccbcb;
+    height: 35px;
+    border: none;
+    background: linear-gradient(177deg, #f10404, #e6777a, #f2dfdf);
+    text-align: center;
+    margin: 30px 40px 40px;
+    padding: 10px;
+    transition: all .3s ease-in-out;
+    cursor: pointer;  
+}
+
+.button {
+    box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2), 0 6px 20px 0 rgba(0,0,0,0.19);
+  }
+  
+.button:hover {
+    box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24), 0 17px 50px 0 rgba(0,0,0,0.19);
+  }
+button {
+    box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2), 0 6px 20px 0 rgba(0,0,0,0.19);
+  }
+  
+button:hover {
+    box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24), 0 17px 50px 0 rgba(0,0,0,0.19);
+  }
+
+  a:link { text-decoration: none; }
+
+
+  a:visited { text-decoration: none; }
+  
+  
+  a:hover { text-decoration: none; }
+  
+  
+  a:active { text-decoration: none; }
+
+
+  .comments {
+    margin-top: 20px;
+  }
+  
+  .comments-title {
+    font-size: 30px;
+    margin-bottom: 20px;
+  }
+  
+  .comments-container {
+    margin-top: 40px;
+  }
+  
+  .comment-form-title {
+    font-size: 22px;
+  }
+  
+  .comment-form-textarea {
+    width: 100%;
+    height: 80px;
+    margin-bottom: 8px;
+    margin-top: 8px;
+    border: 1px solid rgb(107, 114, 12);
+  }
+  
+  .comment-form-button {
+    font-size: 16px;
+    padding: 8px 16px;
+    background: rgb(59, 130, 246);
+    border-radius: 8px;
+    color: white;
+  }
+  
+  .comment-form-button:hover:enabled {
+    cursor: pointer;
+    background: rgb(37, 99, 235);
+  }
+  
+  .comment-form-button:disabled {
+    opacity: 0.7;
+    cursor: default;
+  }
+  
+  .comment-form-cancel-button {
+    margin-left: 10px;
+  }
+  
+  .comment {
+    display: flex;
+    margin-bottom: 28px;
+  }
+  
+  .comment-image-container {
+    margin-right: 12px;
+  }
+  
+  .comment-image-container img {
+    border-radius: 50px;
+  }
+  
+  .comment-right-part {
+    width: 100%;
+  }
+  
+  .comment-content {
+    display: flex;
+  }
+  
+  .comment-author {
+    margin-right: 8px;
+    font-size: 20px;
+    color: rgb(59, 130, 246);
+  }
+  
+  .comment-text {
+    font-size: 18px;
+  }
+  
+  .comment-actions {
+    display: flex;
+    font-size: 12px;
+    color: rgb(51, 51, 51);
+    cursor: pointer;
+    margin-top: 8px;
+  }
+  
+  .comment-action {
+    margin-right: 8px;
+  }
+  
+  .comment-action:hover {
+    text-decoration: underline;
+  }
+  
+  .replies {
+    margin-top: 20px;
+  }  
+
+@media screen and (min-width: 768px) and (max-width: 991px) {
+    .page_container{
+        max-width: 100%;
+    }
+    .navbar-logo{
+        align-self: center;
+          width: 25%;
+          height: 25%;
+          margin-left: 540px;
+    }
+    .navbar-dropdown{
+        width: 100%;
+          align-self: center;
+          display: flex;
+          flex-direction: column-reverse;
+          margin-left: 123px;
+          font-size: 10px;
+          margin-left: 500px;
+    }
+
+    
+
+    .navbar-link{
+        
+        text-align: center;
+    }
+
+    header{
+        flex-direction: column;
+        width: 281px;
+    }
+
+    header nav{
+        width: 100%;
+        align-self: center;
+        display: flex;
+        flex-direction: column-reverse;
+    }
+
+    body{
+        align-self: center;
+        width: 300px;
+        font-size: 13px;
+    }
+
+    #messages{
+        width: 100%;
+        flex-direction: column-reverse;
+        align-items: center;
+        margin-left: 140px;
+        font-size: 13px;
+    }
+
+    #posts{
+        width: 100%;
+        flex-direction: column-reverse;
+        align-items: center;
+        margin-left: 140px;
+        font-size: 13px;
+    }
+.button{
+    font-size: 13px;
+}
+
+input {
+    width: 50%;
+    text-align: center;
+    margin-bottom: 10px;
+    margin-right: 50px;
+}
+
+
+
+textarea{
+    width: 50%;
+    text-align: center;
+    margin-bottom: 10px;
+    margin-right: 50px;
+}
+
+
+
+.post-project h3{
+    margin-right: 50px;
+}
+}
+
+
+
+@media screen and (max-width: 767px){
+    .page_container{
+        max-width: 100%;
+    }
+    .navbar-logo{
+        align-self: center;
+          width: 25%;
+          height: 25%;
+    }
+    .navbar-dropdown{
+        width: 100%;
+          align-self: center;
+          display: flex;
+          flex-direction: column-reverse;
+          margin-left: 123px;
+          font-size: 10px;
+    }
+    .navbar-dropdown a {
+        text-decoration: none;
+        text-align: center;
+        font-size: 22px;
+        text-decoration: none;
+        padding: 10px;
+        margin: 16px;
+        
+      }
+    header{
+        flex-direction: column;
+        width: 281px;
+    }
+
+    header nav{
+        width: 100%;
+        align-self: center;
+        display: flex;
+        flex-direction: column-reverse;
+    }
+
+    body{
+        align-self: center;
+        width: 300px;
+        font-size: 13px;
+    }
+
+    #messages{
+        width: 222px;
+        flex-direction: column-reverse;        
+        align-items: center;
+        margin-left: 37px;
+        font-size: 13px;
+    }
+
+    #posts{
+        width: 222px;
+        flex-direction: column-reverse;        
+        align-items: center;
+        margin-left: 37px;
+        font-size: 13px;
+    }
+.button{
+    font-size: 13px;
+}
+
+input {
+    width: 50%;
+    text-align: center;
+    margin-bottom: 10px;
+    margin-right: 50px;
+}
+
+
+img {
+    max-height: 220px;
+    margin: 0 auto;
+}
+
+
+textarea{
+    width: 50%;
+    text-align: center;
+    margin-bottom: 10px;
+    margin-right: 50px;
+}
+
+
+
+.post-project h3{
+    margin-right: 50px;
+}
+
 }
